# trendICA

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  api_searchapi.py  api_serpapi.py  api_serpwow.py  api_trendspy.py  artificial_intelligence_2025-04-23_i001.csv  base_classes.py  default_config.yaml  dev.py  gtrend.py  gtrend_old.py  gtrend_tests.py  gtrend_tools.py  gtrend_unittests.py  minimal_plot_test.py  pyproject.toml  review_trends2.ipynb  setup.py  simple_api_tests.py  simple_search_by_day_test.py  simple_search_test.py  test_applescript_safari.py  test_classes.ipynb  test_impersonate_trends.py  test_plotly_save.py  test_selenium.py  test_stagger_compile.ipynb  utils.py  value_counts_utils.py
APIs/: __init__.py  api_utils.py  applescript_safari.py  base_classes.py  searchapi.py  serpapi.py  serpapi_python.py  serpwow.py  trendspy.py  win-uiauto-edge.py
docs/: README.md  api_implementations.md  core_api.md  utilities.md
examples/: daily_test.ipynb  review_trends3.ipynb  test_classes.ipynb  test_stagger_compile.ipynb
gtrend_api_tools/: __init__.py  date_ranges.py  granularity.py  gtrend.py  utils.py
test_outputs/: ApplescriptSafari_coffee,tea_2025-06-03_16-31-05_raw.txt  ApplescriptSafari_coffee,tea_2025-06-03_16-31-05_standardized.txt  ApplescriptSafari_coffee,tea_2025-06-03_16-38-57_raw.txt  ApplescriptSafari_coffee,tea_2025-06-03_16-38-57_standardized.txt  SearchApi.txt  SearchApi_bathroom_bill,transgender.txt  SearchApi_butterscotch.txt  SearchApi_coffee,tea_2025-06-03_15-17-01_raw.txt  SearchApi_coffee,tea_2025-06-03_16-31-01_raw.txt  (+27 more)
(+63 files in other folders)
